--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.cspinformatique</groupId>
+  <groupId>com.manexware</groupId>
   <artifactId>odoo-java-api</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>openerp</name>
-  <url>http://maven.apache.org</url>
+  <name>odoo</name>
+  <url>http://www.github.com/manexware/odoo9-java-api</url>
   
   <build>
   	<plugins>
@@ -16,8 +16,8 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
 			<configuration>
-				<source>1.7</source>
-				<target>1.7</target>
+				<source>1.8</source>
+				<target>1.8</target>
 			</configuration>
   		</plugin>
   	</plugins>
