--- a/src/test/resources/config/odoo.properties
+++ b/src/test/resources/config/odoo.properties
@@ -1,7 +1,7 @@
-odoo.host=docker.cspinformatique.com
+odoo.host=localhost
 odoo.port=8069
 odoo.database=test
-odoo.user=test-user
-odoo.companyName=Test company
-odoo.password=test
-odoo.masterPassword=admin
+odoo.user=admin
+odoo.companyName=My Company
+odoo.password=adv13671
+odoo.masterPassword=adv13671
